@@ -18,6 +18,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #21548: Fix pydoc.synopsis() and pydoc.apropos() on modules with empty
+  docstrings.  Initial patch by Yuyang Guo.
+
 - Issue #22885: Fixed arbitrary code execution vulnerability in the dumbdbm
   module.  Original patch by Claudiu Popa.
 
